--- a/package.json
+++ b/package.json
@@ -97,8 +97,9 @@
     ],
     "testEnvironment": "node",
     "moduleNameMapper": {
-    "^src/(.*)$": "<rootDir>/$1",
-    "^generated/(.*)$": "<rootDir>/../generated/$1"
-  }
+      "^src/(.*)$": "<rootDir>/$1",
+      "^test/(.*)$": "<rootDir>/../test/$1",
+      "^generated/(.*)$": "<rootDir>/../generated/$1"
+    }
   }
 }
